kubernetes/apps/base/game-servers/minecraft/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-map
  namespace: game-servers
  annotations:
    external-dns.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'map.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: minecraft
          port: 8100
          weight: 100
